@@ -1,9 +1,7 @@
 TODO
     - Ard
-        - Disable dropping items over water (overridable with ctrl)
         - Aggro players in proximity to the mouse cursor
         - Aggro animals in proximity to the mouse cursor
-        - keybind to pick up foragables nearest to you when used
     - Add more keybinds for switching through hotbar pages
         - Ie: Alt+1 = page 1 of number bar, Alt+2 = page 2, etc
     - Move away from GL 1.x calls for UI
